@@ -252,11 +252,11 @@
 (export-struct 'issue)
 
 ;; Issue number への変換
-(defun coerce-issue-number (number)
-  (check-type number (or integer issue))
-  (if (issue-p number)
-      (issue-number number)
-    number))
+(defun coerce-issue-number (issue)
+  (check-type issue (or integer issue))
+  (if (issue-p issue)
+      (issue-number issue)
+    issue))
 
 
 ;;; ## Network API ##
